# lambda_repl

./: README.md  pyproject.toml
.github/workflows/: Tests.yaml
lambda_repl/: __init__.py  grammar.lark  main.py  parsing.py
src/lambda_repl/: __init__.py  aliases.py  grammar.lark  parsing.py
tests/: test_aliases.py  test_parsing.py  test_repl.py
