[project]
name = "lambda_repl"
version = "1.2.0"
description = "REPL for the lambda calculus"
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "lambda-calculus ~= 2.0",
    "lark ~= 1.0"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[[project.authors]]
name = "Eric Niklas Wolf"
email = "eric_niklas.wolf@mailbox.tu-dresden.de"

[project.urls]
Repository = "https://github.com/Deric-W/lambda_repl"
Bugtracker = "https://github.com/Deric-W/lambda_repl/issues"

[project.scripts]
lambda-repl = "lambda_repl.main:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.test]
dependencies = [
    "coverage[toml] == 7.*"
]

[tool.hatch.envs.test.scripts]
test = "python -m unittest discover {args}"
cov-run = "coverage run -m unittest discover {args}"
cov-report = [
    "- coverage combine",
    "coverage report"
]
cov = [
    "cov-run",
    "cov-report"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
dependencies = [
    "mypy >= 1.0.0",
    "pylint >= 2.12.2",
    "flake8 >= 5.0.0",
    "isort >= 5.10.1"
]

[tool.hatch.envs.lint.scripts]
typecheck = "mypy -p lambda_repl"
release = [
    "typecheck"
]

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.mypy]
disallow_any_unimported = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.coverage.run]
source_pkgs = ["lambda_repl"]
branch = true
parallel = true
